--- a/calculator.html
+++ b/calculator.html
@@ -7,7 +7,6 @@
      <!-- <link href="https://cdn.jsdelivr.net/npm/daisyui@4.12.23/dist/full.min.css" rel="stylesheet" type="text/css" /> -->
      <!-- <script src="https://cdn.tailwindcss.com"></script> -->
      <link rel="stylesheet" href="style.css">
- 
     <title>Calculator By Code Traversal</title>
 </head>
 <body>
@@ -45,6 +44,6 @@
         </div>
     </div>
 
-    <script src="script.js"></script>c
+    <script src="script.js"></script>
 </body>
 </html>
